# mExchange

./: README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
accounts/: Cargo.toml
accounts/migrations/: 006_exchange_fill_id_index.sql
accounts/src/: main.rs  scheduler.rs
accounts/src/models/: ohlcv.rs
accounts/src/routes/: auth.rs  internal.rs
accounts/tests/: internal_api_tests.rs
e2e-tests/src/: accounts-client.ts  test-client.ts
frontend/src/: App.tsx
frontend/src/api/: accounts.ts
frontend/src/components/: DepthChart.tsx  MarketStats.tsx  OrderBook.tsx  PriceChart.tsx  RecentTrades.tsx
frontend/src/hooks/: useOrderBook.ts  useOrderBookWorker.ts  useWebSocket.ts
frontend/src/workers/: marketDataWorker.ts
gateway/: Cargo.toml
gateway/src/: channel_updates.rs  main.rs  proxy.rs  server.rs  state.rs  websocket.rs
market_data/: Cargo.toml
market_data/src/: main.rs
matching_engine_service/: Cargo.toml
matching_engine_service/src/: main.rs
trading_bot/: Cargo.toml  Dockerfile
trading_bot/src/: gateway_client.rs  lib.rs  main.rs  types.rs
trading_bot/src/strategies/: aggressive.rs  liquidity_provider.rs  market_maker.rs  mean_reversion.rs  mod.rs  random.rs  random_walk.rs
udp_proto/: Cargo.toml
udp_proto/src/: receiver.rs  sender.rs
